# test

./: .gitignore  AutoVersion.cmake  CMakeLists.txt  CTestTestfile.cmake  Doxyfile.docs  Kbuild.in  Makefile.am  README.md  TODO  autogen.sh  cmake_install.cmake  configure.ac  dev.sh  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8b3c4a12190ac54f23b9910a30f90979.html  files.html  foo_8h.html  foo_8h__incl.dot  foo_8h__incl.md5  foo_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  libtool  mainpage_8md.html  test.sh  version.h
.github/workflow-templates/: demo-workflow.properties.json  demo-workflow.yml
.github/workflows/: autotools-2.yml  autotools.yml  cmake.yml  kernel.yml  master.yml  module.yml  release.yml
apps/: CMakeLists.txt  hello.c  main.c
cmake/: FindKernelHeaders.cmake
docs/: CMakeLists.txt
html/: foo_8h.html  foo_8h__incl.map  globals_defs.html  globals_type.html
html/search/: files_0.js
include/modern/: foo.h
search/: all_1.js  all_2.js  all_3.js  defines_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js
src/: CMakeLists.txt  Makefile.am  foo.c  foo.h  foo.lo  libfoo.la  main.c  test.c
src/.libs/: libfoo.lai  libfoo.so.0  libfoo.so.0.0.0  main
tests/: CMakeLists.txt  Makefile.am  check_foo  check_foo.c
tests/.libs/: check_foo
