SUBDIRS = src

clean-local:
	@rm config.status configure config.log
	@rm Makefile
	@rm -r autom4te.cache/
	@rm aclocal.m4
	@rm compile install-sh missing Makefile.in
	@rm config.h config.h.in
	@-rm config.h.in~
	@-rm configure~
	@rm depcomp stamp-h1
	@rm src/Makefile.in src/Makefile
	@rm -r src/.deps
	@-rm src/test src/test.o

